--- a/SleepBit2/app/build.gradle
+++ b/SleepBit2/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-
+    implementation 'androidx.fragment:fragment-ktx:1.5.0'
 }
